2007-08-29  Andreas Kirschbaum

	* Sort the spell belt by spell path and spell name.

	* In the spell belt, display only spells actually known by the
	character.

2007-08-27  Andreas Kirschbaum

	* Add tooltips for resistances and stat gauges.

	* Update inventory and ground views when pictures become
	available.

2007-08-06  Andreas Kirschbaum

	* Fix crash in animation handling code.

	* Fix stat/resistance display for negative values.

	* Improve metaserver selection window: always include "localhost"
	entry; do not crash for parsing errors.

2007-08-02  Andreas Kirschbaum

	* Fix word wrapping in log window.

2007-08-01  Andreas Kirschbaum

	* Implement media tags; don't use book popup windows for anything
	else than books.

2007-07-26  Andreas Kirschbaum

	* Add the server hostname and player name to the window title.

	* Make sure the window interior has the correct size.

	* Make the main window non-resizable and center it on the screen.

	* Move HP/SP/GR/FP text display below the gauges.

	* Add tooltips for spellbelt and spelllist.

	* Increase font sizes and remove unnecessary text information.

	* Add option --server to skip the metaserver window.

	* Rename option -opengl to --opengl.

2007-07-25  Andreas Kirschbaum

	* Fix CTRL key handling when switching between applications
	with (for example) CTRL+ALT+direction key.

2007-07-24  Andreas Kirschbaum

	* Fix player and weapon speed display.

	* Implement client-side animations in map window.

2007-07-05  Andreas Kirschbaum

	* Add option -N to disable full-screen mode/enable windowed mode.

2007-07-04  Andreas Kirschbaum

	* Change skin handling from hard-coded JXCSkinPrelude class to
	config files:
	- Option -S now takes a skin name, not a class name.
	- jxclient.jar now includes the default skin. The name is
	"default". This means "java -jar jxclient.jar" works.
	- Skins now are specified through config files. The skin name is
	either a directory or a directory name under