@@ -1,5 +1,7 @@
 2007-08-29  Andreas Kirschbaum
 
+	* Update spellbelt when the chracter learns or forgets a spell.
+
 	* Sort the spell belt by spell path and spell name.
 
 	* In the spell belt, display only spells actually known by the
